stderr
JudgeMan.java:78: error: variable i is already defined in method pairJudge(String[])
                    for(int i = 0; i < isPaired.size(); i++){
                            ^
JudgeMan.java:79: error: incomparable types: Integer and String
                        if(isPaired.get(i) == number){
                                           ^
2 errors
